apps/devices/opentherm-monitor/templates/route-require-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: route-require-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: opentherm-monitor
  oidc:
    provider:
      issuer: https://authentik.mobrockers.com/application/o/opentherm-monitor/
    redirectURL: https://opentherm-monitor.mobrockers.com/oauth2/callback
    logoutPath: /oauth2/logout
    clientID: eD5uQ5w1qIQUTtFWTXRn7gcqUgLYFJo3Qw3Jv8Jq
    clientSecret:
      name: route-oidc-secret
